# midenscan

./: LICENSE  README.md
backend/: .env  .gitignore  package-lock.json  package.json  tsconfig.json
backend/db/: generateType.ts  knexfile.ts
backend/src/: config.ts
backend/src/db/: account.ts  account_update.ts  account_vault_asset.ts  block.ts  index.ts  note.ts  note_asset.ts  nullifier.ts  transaction.ts
backend/src/types/: db_generated.ts  index.ts  note.ts  sort.ts
backend/src/utils/: cursor.ts  index.ts  validators.ts
frontend/: .env.development  additional.d.ts  codegen.yml  next.config.js  package-lock.json  package.json  relay.config.js  tailwind.config.js  tsconfig.json
frontend/components/modules/: DetailsContainer.tsx  EndMessage.tsx  ErrorBoundaryWithFallback.tsx  ErrorPage.tsx  LinkRef.tsx  NumberTicker.tsx  PageMetaTagWrapper.tsx  SsrSuspense.tsx  TabContainer.tsx  (+1 more)
frontend/libs/: config.ts  constants.ts  errors.ts  format.ts  getSearchRoute.ts  paths.ts  styles.ts  tooltipMessages.ts
frontend/pages/: 404.tsx  _app.tsx  account-updates.tsx  accounts.tsx  blocks.tsx  index.tsx  notes.tsx  txs.tsx
frontend/styles/: globals.css
indexer/: Cargo.toml  Dockerfile.indexer  Makefile  migration.sql
indexer/src/: main.rs
indexer/src/db/: account.rs  block.rs  db.rs  mod.rs  models.rs  note.rs  nullifier.rs  state_ref.rs  transaction.rs
indexer/src/indexer/: indexer.rs  mod.rs
indexer/src/indexer/handlers/: account.rs  block.rs  mod.rs  note.rs  nullifier.rs  transaction.rs
indexer/src/rpc/: rpc.rs
indexer/src/utils/: format.rs
(+300 files in other folders)
