[package]
name = "midenscan-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "postgres", "bigdecimal", "runtime-tokio-native-tls" ] }
anyhow = "1.0"
miden-node-proto = { version = "0.5.0", default-features = false }
miden-objects = { version = "0.5.1", default-features = false, features = ["serde"] }
